# lidar_filtering

./: .gitignore  CMakeLists.txt  package.xml  readme.md
cfg/: LidarFiltering.cfg
include/lidar_filtering/: lidar_filter_core.hpp
launch/: lidar_filtering.launch
params/: filter_params.yaml  lidar_calibration.yaml  vehicle_size.yaml
scripts/: config_editor_gui.py  readme.md
src/: laser_sun_filter.cpp  lidar_filter_core.cpp  node.cpp
